[workspace]
members = [
    "measure",

    "tcp",
    "tcp-tokio",
    "tcp-tokio-rustls",
    "tcp-tokio-native-tls",

    "http-warp-rustls",
    "http-rocket-rustls",

    "jsonrpc-http",
    "jsonrpc-tcp",

    "cborrpc-rustls",
]

[profile.release]
incremental = false
codegen-units = 1
lto = true

[patch.crates-io]
serde_cbor = { git = 'https://github.com/npmccallum/cbor', branch='master' }
