[package]
name = "cborrpc-rustls"
version = "0.1.0"
authors = ["Nathaniel McCallum <npmccallum@redhat.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "*", features = [ "macros", "tcp", "io-util", "dns", "stream" ] }
tokio-util = { version = "*", features = [ "codec" ] }
tokio-rustls = "*"
serde_cbor = { version = "*", features = [ "codec" ] }
serde = "*"
bytes = "*"
futures = "*"
